--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="main">
     <header>
          <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,11 @@
 </nav>
     </header>
  <main>
+  <section class="main-image">
+    <img src="img/logo.png" alt="">
     <h2>Довідник Андрія Борисюка</h2>
     <button>READ MORE</button>
+    </section>
      <section class="pluses">
     <article class="column">
         <div class="number">
