--- a/index2.html
+++ b/index2.html
@@ -1,20 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>Andrew Reptiles</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <style>
+        :root {
+            --primary-green: #009e4f;
+            --dark-bg: #021a0f;
+            --card-bg-overlay: rgba(0, 100, 50, 0.85);
+            --text-yellow: #ffd700;
+        }
 
+        body {
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: var(--dark-bg);
+            color: white;
+        }
+
+        .btn-success-custom {
+            background-color: var(--primary-green);
+            border: none;
+            border-radius: 2px;
+            padding: 10px 30px;
+            text-transform: uppercase;
+            font-weight: 600;
+            font-size: 0.8rem;
+            transition: all 0.3s;
+        }
+
+        .btn-success-custom:hover {
+            background-color: #007a3d;
+            color: white;
+        }
+
+        .hero-section {
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1531386816498-111523ecbd8e?q=80&w=1920&auto=format&fit=crop');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .logo-box {
+            background: rgba(0,0,0,0.6);
+            padding: 20px 40px;
+            border-radius: 4px;
+            display: inline-block;
+            margin-bottom: 20px;
+        }
+
+        .features-section {
+            background: linear-gradient(rgba(0,50,20,0.3), rgba(0,50,20,0.3)), url('https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?q=80&w=1920&auto=format&fit=crop');
+            background-size: cover;
+            background-position: center;
+            padding: 100px 0;
+        }
+
+        .feature-card {
+            background-color: var(--card-bg-overlay);
+            padding: 25px;
+            margin-bottom: 15px;
+            border-radius: 4px;
+        }
+
+        .news-card {
+            background: white;
+            color: #333;
+            border: none;
+            height: 100%;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        .news-card img {
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .footer-curve {
+            background-color: var(--primary-green);
+            border-top-left-radius: 50% 100px;
+            border-top-right-radius: 50% 100px;
+            padding-top: 80px;
+            margin-top: 80px;
+        }
+
+        .name-border {
+            border-left: 4px solid var(--text-yellow);
+            padding-left: 15px;
+        }
+
+        .nav-link {
+            font-size: 0.8rem;
+            letter-spacing: 1px;
+        }
+    </style>
 </head>
-<body class="main">
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" style="background: rgba(2, 26, 15, 0.9);">
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" style="background: rgba(2, 26, 15, 0.9);">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-               <img width="80" src="img/logo.png" alt="">
+                <i class="bi bi-globe-asia-australia text-success"></i>
                 </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <span class="navbar-toggler-icon"></span>
@@ -29,14 +122,18 @@
             </div>
         </div>
     </nav>
+
+    <header class="hero-section">
+        <div class="container">
+            <div class="logo-box">
+                <i class="bi bi-bounding-box-circles fs-1 text-success"></i>
+                <div class="text-uppercase fw-bold text-success small mt-1">REPTILES</div>
+            </div>
+            <h1 class="display-4 fw-bold text-white mb-4">Довідник Андрія Борисюка</h1>
+            <a href="#" class="btn btn-success-custom px-4">ДЕТАЛЬНІШЕ</a>
+        </div>
     </header>
- <main>
-  <section class="main-image pt-5">
-    <img class="mt-5" src="img/logo.png" alt="">
-    <h2>Довідник Андрія Борисюка</h2>
-    <button class="btn-success-custom">Детальніше</button>
-    </section>
-    
+
     <section class="py-5">
         <div class="container text-center py-5">
             <div class="row justify-content-center">
@@ -52,7 +149,7 @@
         </div>
     </section>
 
-       <section class="features-section">
+    <section class="features-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-5 mb-lg-0">
@@ -171,10 +268,7 @@
             </div>
         </div>
     </footer>
- </main>
- 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-<script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
