--- a/index.html
+++ b/index.html
@@ -11,65 +11,127 @@
 </head>
 <body class="main">
     <header>
-         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" style="background: rgba(2, 26, 15, 0.9);">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+               <img width="80" src="img/logo.png" alt="">
+                </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-uppercase fw-bold">
+                    <li class="nav-item"><a class="nav-link text-white px-4" href="#">ПРО НАС</a></li>
+                    <li class="nav-item"><a class="nav-link text-white px-4" href="#">КАТАЛОГ</a></li>
+                    <li class="nav-item"><a class="nav-link text-white px-4" href="#">НОВИНИ</a></li>
+                </ul>
+                <button href="#">ПІДТРИМАТИ</button>
+            </div>
+        </div>
+    </nav>
     </header>
  <main>
-  <section class="main-image">
-    <img src="img/logo.png" alt="">
+  <section class="main-image pt-5">
+    <img src="img/logo.png" class="mt-5">
     <h2>Довідник Андрія Борисюка</h2>
     <button>READ MORE</button>
     </section>
-     <section class="pluses">
-    <article class="column">
-        <div class="number">
-            
+     <section class="intro-section py-5">
+        <div class="container text-center py-5">
+          <h2 class="text-uppercase fw-bold text-warning mb-4">вітаємо вас дорогі читачі</h2>
+          <p class="col-md-6 mx-auto">Тут ви зможете знайти різні цікаві факти про рептилій. Світ рептилій з Андрієм Борисюком Зануртеся у захоплюючий світ холоднокровних! Тут ви зможете знайти різні цікаві факти про рептилій, їхній спосіб життя та унікальні особливості. Досліджуйте, дивуйтесь та дізнавайтесь нове!</p>
+          <button>Розпочати</button>
+ </div>
+    </section>
+    <section class="features-section py-5">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <h2 class="section-title display-5 mb-5">ПЕРЕВАГИ НАШОЇ<br>ПЛАТФОРМИ</h2>
+                    <div class="author-block ps-3">
+                        <div class="h5 fw-light mb-0">ANDREW</div>
+                        <div class="h3 fw-bold">Borisiuk</div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="card1">
+                    <h3 class="text-uppercase fw-bold text-warning mb-2">ЧОМУ ВИДИ НА ГРАДУ</h3>
+                    <p>Унікальні за своїм виглядом, способом життя та поведінки, коли вони зникнуть, на землі не залишиться нічого подібного до них.</p>
+                  </div>
+                  <div class="card1">
+                    <h3 class="text-uppercase fw-bold text-warning mb-2">ЩО МИ РОБИМО</h3>
+                    <p>Ми ділимося з вами повчальною та цікавою інформацією про рептилій.</p>
+                  </div>
+                  <div class="card1">
+                    <h3 class="text-uppercase fw-bold text-warning mb-2">Що ви можете зробити</h3>
+                    <p>Після читання нашого сайту ви дізнаєтеся більше про рептилій і можете поділитися цими знаннями з іншими.</p>
+                  </div>
+                </div>
+            </div>
         </div>
-        <div class="text">
-            <h5></h5>
-            <p></p>
+    </section>
+     <section class="news-section py-5">
+        <div class="container py-5">
+            <h2 class="section-title text-center mb-5">НОВИНИ</h2>
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-3">
+                    <div class="card news-card h-100 border-0">
+                  <img src="img/image 2.png">
+                        <div class="card-body d-flex flex-column p-4">
+                            <div class="news-date mb-2">20.10.2023</div>
+                            <h5 class="news-title mb-3">Крокодили</h5>
+                            <p class="news-desc flex-grow-1">Крокодили (Crocodylia) — ряд водних плазунів, єдине сучасне ряд архозаврів...</p>
+                            <button>ЧИТАТИ</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card news-card h-100 border-0">
+                  <img src="img/image 3.png">
+                        <div class="card-body d-flex flex-column p-4">
+                            <div class="news-date mb-2">20.10.2023</div>
+                            <h5 class="news-title mb-3">Черепахи</h5>
+                            <p class="news-desc flex-grow-1"> Черепахи – це рептилії ряду Testudines, що характеризуються особливим панциром, розвиненим переважно з їхніх...</p>
+                            <button>ЧИТАТИ</button>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-md-6 col-lg-3">
+                    <div class="card news-card h-100 border-0">
+                  <img src="img/image 5.png">
+                        <div class="card-body d-flex flex-column p-4">
+                            <div class="news-date mb-2">20.10.2023</div>
+                            <h5 class="news-title mb-3">Хамелеони</h5>
+                            <p class="news-desc flex-grow-1">Хамелеони або chamaeleons — це самобутня та високоспеціалізована клада ящірок Старого Світу, станом на червень 2015 року...</p>
+                            <button>ЧИТАТИ</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card news-card h-100 border-0">
+                  <img src="img/image 6(1).png">
+                        <div class="card-body d-flex flex-column p-4">
+                            <div class="news-date mb-2">20.10.2023</div>
+                            <h5 class="news-title mb-3">Пітони</h5>
+                            <p class="news-desc flex-grow-1"> Pythonidae, широко відомі як пітони, — це родина неотруйних змій, що мешкають в Африці, Азії та Австралії. Серед її представників є одні...</p>
+                            <button>ЧИТАТИ</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </article>
-</section>
+    </section>
  </main>
 
-<footer>
-    <p>&copy; 2025</p>
-</footer>
+ <footer class="footer-curve pt-5 mt-5">
+        <div class="container pt-5">
+         
+            <div class="text-center mt-5 copyright">
+                @ All rights reserved
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 <script src="script.js" defer></script>
