--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="card-body d-flex flex-column p-4">
                             <div class="news-date mb-2">20.10.2023</div>
                             <h5 class="news-title mb-3">Крокодили</h5>
-                            <p class="news-desc flex-grow-1">Крокодили (Crocodylia) — ряд водних плазунів, єдине сучасне ряд архозаврів...</p>
+                            <p class="news-desc flex-grow-1">Крокодили (Crocodylia) - ряд водних плазунів, єдине сучасне ряд архозаврів...</p>
                             <button>ЧИТАТИ</button>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                         <div class="card-body d-flex flex-column p-4">
                             <div class="news-date mb-2">20.10.2023</div>
                             <h5 class="news-title mb-3">Хамелеони</h5>
-                            <p class="news-desc flex-grow-1">Хамелеони або chamaeleons — це самобутня та високоспеціалізована клада ящірок Старого Світу, станом на червень 2015 року...</p>
+                            <p class="news-desc flex-grow-1">Хамелеони або chamaeleons - це самобутня та високоспеціалізована клада ящірок Старого Світу, станом на червень 2015 року...</p>
                             <button>ЧИТАТИ</button>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         <div class="card-body d-flex flex-column p-4">
                             <div class="news-date mb-2">20.10.2023</div>
                             <h5 class="news-title mb-3">Пітони</h5>
-                            <p class="news-desc flex-grow-1"> Pythonidae, широко відомі як пітони, — це родина неотруйних змій, що мешкають в Африці, Азії та Австралії. Серед її представників є одні...</p>
+                            <p class="news-desc flex-grow-1"> Pythonidae, широко відомі як пітони, - це родина неотруйних змій, що мешкають в Африці, Азії та Австралії. Серед її представників є одні...</p>
                             <button>ЧИТАТИ</button>
                         </div>
                     </div>
