--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="news-date mb-2">20.10.2023</div>
                             <h5 class="news-title mb-3">Крокодили</h5>
                             <p class="news-desc flex-grow-1">Крокодили (Crocodylia) - ряд водних плазунів, єдине сучасне ряд архозаврів...</p>
-                            <button>ЧИТАТИ</button>
+                            <a class="button" href="/crocodiles.html">ЧИТАТИ</a>
                         </div>
                     </div>
                 </div>
