--- a/crocodiles.html
+++ b/crocodiles.html
@@ -92,8 +92,8 @@
                     <h4>Ігуана</h4>
                 </div>
                 <div class="animal-card">
-                    <img src="img/monitor_lizard.png" alt="Варан">
-                    <h4>Варан</h4>
+                    <img src="img/frilled_lizard.png" alt="плащоносна ящірка">
+                    <h4>плащоносна ящірка</h4>
                 </div>
                 <div class="animal-card">
                     <img src="img/gila_monster.png" alt="Монстр Гіла">
@@ -104,6 +104,14 @@
         <img class="hero-image" src="img/comodo_dragon.png" alt="Main Komodo Image">
     </div>
     </div>
+    <section class="gallery pt-5">
+        <div class="container">
+            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
+            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
+            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
+            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
+        </div>
+    </section>
     </main>
      <footer class="footer-curve pt-5 mt-5">
         <div class="container pt-5">
