--- a/crocodiles.html
+++ b/crocodiles.html
@@ -106,10 +106,10 @@
     </div>
     <section class="gallery pt-5">
         <div class="container">
-            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
-            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
-            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
-            <img class="gallery-item" src="https://placehold.co/250x180/333/fff?text=Photo+1" alt="Gallery 1">
+            <img class="gallery-item" src="img/gallery 1.png" alt="Gallery 1">
+            <img class="gallery-item" src="img/gallery 2.png" alt="Gallery 1">
+            <img class="gallery-item" src="img/gallery 3.png" alt="Gallery 1">
+            <img class="gallery-item" src="img/gallery 4.png" alt="Gallery 1">
         </div>
     </section>
     </main>
