--- a/settings.html
+++ b/settings.html
@@ -6,15 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="about.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <style>
+      .settings-main {
+        min-height: 80vh;
+        padding-top: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
-  <body class="main about">
+  <body class="main">
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" style="background: rgba(2, 26, 15, 0.9)">
         <div class="container">
@@ -35,32 +43,21 @@
         </div>
       </nav>
     </header>
-    <main>
-      <h1>Ласкаво просимо на Reptilies Hub – ваш провідний ресурс у світі рептилій!</h1>
-      <img src="img/gallery 1.png" alt="" />
-
-      <section class="about1">
-        <div>
-          <p>
-            Наша місія полягає в тому, щоб надати вам найповнішу та найактуальнішу інформацію про різноманітний світ
-            рептилій. Незалежно від того, чи ви є досвідченим герпетологом, чи просто захоплюєтесь цими дивовижними
-            створіннями, ми прагнемо бути вашим надійним джерелом знань.
-          </p>
-        </div>
-        <div>
-          <p>
-            Також ми прагнемо сприяти збереженню рептилій та їхніх природних середовищ існування через підвищення
-            обізнаності та освіту. Приєднуйтесь до нас у нашій подорожі, щоб досліджувати, вивчати та захоплюватися
-            світом рептилій разом!
-          </p>
-        </div>
-      </section>
+    <main class="settings-main">
+      <h2>Сторінка ще в розробці!</h2>
     </main>
+
     <footer class="footer-curve pt-5 mt-5">
       <div class="container pt-5">
         <div class="text-center mt-5 copyright">@ All rights reserved</div>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="script.js" defer></script>
   </body>
 </html>
