--- a/lizards.html
+++ b/lizards.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-uppercase fw-bold">
               <li class="nav-item"><a class="nav-link text-white px-4" href="./about.html">ПРО НАС</a></li>
-              <li class="nav-item"><a class="nav-link text-white px-4" href="./settings.html">КАТАЛОГ</a></li>
+              <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
             <button href="#">ПІДТРИМАТИ</button>
