--- a/crocodiles.html
+++ b/crocodiles.html
@@ -33,8 +33,8 @@
     </header>
     <main>
     <div class="container mt-5">
-        <h1>Комодский варан</h1>
-        <p>Сучасні ящірки</p>
+        <h1>Гребенястий крокодил</h1>
+        <p>Сучасні крокодилові</p>
         <nav class="nav-tabs">
             <a href="#" data-target="info-panel" class="tab-link" style="border-bottom: 2px solid white;">Огляд</a>
             <a href="#" data-target="details" class="tab-link">Характеристики</a>
@@ -45,20 +45,16 @@
         <div class="info-panel animal-block active" id="info-panel">
             <h3 class="section-header">Про нього</h3>
             
-            <p class="text-block">Комодський варан –
-це найбільша ящірка у світі, яка може досягати 2 метрів у довжину і важити 70 кг, а також є одним із найнебезпечніших хижаків. Додаткові цікаві факти про них включають: їхню здатність відчувати  запах здобичі на великій відстані за допомогою язика; їхнє агресивне  полювання на великих тварин, включаючи оленів і свиней; їхню здатність  до партеногенезу (розмноження без самців); та їхню дивовижну здатність  переміщатися по деревах і плавати. 
-</p>
-            <h3 class="section-header" style="font-size: 16px;">Небезпека для людини</h3>
+            <p class="text-block">Гребенястий крокодил –
+Крокодил гребенястий, гребінчастий, або морський (Crocodylus porosus) — вид крокодила, що мешкає в солоних водоймах, солонуватих водно-болотних угіддях і прісних річках від східного узбережжя Індії через Південно-Східну Азію і Сунду до північної Австралії та Мікронезії. Це найбільша рептилія з нині існуючих у світі[3]. Самці можуть сягати ваги 1000—1500 кг і довжини у 6 м, рідко перевищуючи 6,3 м[4][5]. Самки набагато менші — до 3 м завдовжки[6][7]. 
+            </p>
+            <h3 class="section-header" style="font-size: 16px;">небезпека для нього і для людей</h3>
             <ul class="text-block">
-                <li>Комодські варани відомі своєю агресивністю.</li>
-                <li>Хоча напади на людей трапляються рідко, вони можуть бути небезпечними.</li>
-                <li>Попри це, комодські варани також можуть утримуватися в тераріумах у зоопарках та інших установах, де вони часто демонструють агресивну поведінку. </li>
+                <p>З 1996 року внесений до Червоного списку МСОП як вид, що викликає найменші занепокоєння[2]. До 1970-х років на нього полювали заради видобутку шкур по всьому ареалу. Сьогодні йому загрожують браконьєрство і втрата ареалу. Вважається небезпечним для людини[8]. </p>
             </ul>
-            <h3 class="section-header" style="font-size: 16px;">Розмноження</h3>
+            <h3 class="section-header" style="font-size: 16px;">Полювання</h3>
             <p class="text-block">
-                <li>У комодських варанів є унікальна здатність розмножуватися без самців (партеногенез).</li>
-                <li>У разі відсутності самців самки можуть відкладати незапліднені яйця, що  призводить до появи потомства, яке здебільшого є самцями.</li>
-                <li>Ця здатність дозволяє їм засновувати нові колонії на сусідніх островах у разі, якщо вони опиняться там без самців.</li>
+                <p>Морські крокодили є великими опортуністичними вищими гіперхижаками, що полюють на більшість своєї здобичі із засідки, після чого топлять й ковтають її цілком. Вони полюють майже на будь-яку тварину, яка потрапляє на їхню територію, включаючи інших хижаків, таких як акули, різні види прісноводних і морських риб, включаючи пелагічні види, безхребетних, таких як ракоподібні, різні земноводні, інші плазуни, птахи та ссавці[9][10]. </p>
             </p>
             <table class="stats-table">
             </table>
@@ -67,19 +63,19 @@
         <div class="details animal-block" id="details">
             <div class="detail-item">
                 <h4>Наукова назва</h4>
-                <p>Varanus komodoensis</p>
+                <p>Crocodylus porosus</p>
             </div>
             <div class="detail-item">
                 <h4>Розмір</h4>
-                <p>До 3 метрів</p>
+                <p>До 6 метрів Самці, до 3 метрів Самки</p>
             </div>
             <div class="detail-item">
                 <h4>Вага</h4>
-                <p>До 70 кг</p>
+                <p>До 1,100 кг</p>
             </div>
             <div class="detail-item">
                 <h4>Тривалість життя</h4>
-                <p>Близько 30 років</p>
+                <p>Близько 70 років</p>
         </div>
 
         </div>
@@ -88,28 +84,28 @@
             <h3 class="section-header">Схожі тварини</h3>
             <div class="animal-cards">
                 <div class="animal-card">
-                    <img src="img/iguana.png" alt="Ігуана">
-                    <h4>Ігуана</h4>
+                    <img src="img/iguana.png" alt="Кайман">
+                    <h4>Кайман</h4>
                 </div>
                 <div class="animal-card">
-                    <img src="img/frilled_lizard.png" alt="плащоносна ящірка">
-                    <h4>плащоносна ящірка</h4>
+                    <img src="img/frilled_lizard.png" alt="Алігатор">
+                    <h4>Алігатор</h4>
                 </div>
                 <div class="animal-card">
-                    <img src="img/gila_monster.png" alt="Монстр Гіла">
-                    <h4>Монстр Гіла</h4>
+                    <img src="img/gila_monster.png" alt="Гавіал">
+                    <h4>Гавіал</h4>
                 </div>
             </div>
         </div>
-        <img class="hero-image" src="img/comodo_dragon.png" alt="Main Komodo Image">
+        <img class="hero-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/SaltwaterCrocodile%28%27Maximo%27%29.jpg/250px-SaltwaterCrocodile%28%27Maximo%27%29.jpg" alt="Main Komodo Image">
     </div>
     </div>
     <section class="gallery pt-5">
         <div class="container">
-            <img class="gallery-item" src="img/gallery 1.png" alt="Gallery 1">
-            <img class="gallery-item" src="img/gallery 2.png" alt="Gallery 1">
-            <img class="gallery-item" src="img/gallery 3.png" alt="Gallery 1">
-            <img class="gallery-item" src="img/gallery 4.png" alt="Gallery 1">
+            <img class="gallery-item" src="https://cdnimpuls.com/newsbomb.al/media3/-900-0-1751449777xscreenshot-11-171.jpg" alt="Gallery 1">
+            <img class="gallery-item" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Female_croc.jpg/250px-Female_croc.jpg" alt="Gallery 1">
+            <img class="gallery-item" src="https://media.istockphoto.com/id/501885476/uk/%D1%84%D0%BE%D1%82%D0%BE/%D0%B0%D0%B2%D1%81%D1%82%D1%80%D0%B0%D0%BB%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BA%D1%80%D0%BE%D0%BA%D0%BE%D0%B4%D0%B8%D0%BB.jpg?s=612x612&w=0&k=20&c=N5QOGx_312kwMYJtN8U1eAp6YdHHoKdOHAyI5H4J7NQ=" alt="Gallery 1">
+            <img class="gallery-item" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Large_Crocodylus_porosus.jpg/640px-Large_Crocodylus_porosus.jpg" alt="Gallery 1">
         </div>
     </section>
     </main>
