finishing working with buttons

--- a/list.html
+++ b/list.html
@@ -100,9 +100,43 @@
           <p>Такі собі ящірки</p>
 
           <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
-          </div>
-          <div class="right">
+        </div>
+          <a href="lizards.html" class="right">
             <img src="img/gallery 1.png" alt="">
+          </a>
+        </div>
+        <div class="category-card" data-category="crocodiles">
+          <div class="left">
+            <h2>Супер крокодили</h2>
+          <p>Такі собі крокодили</p>
+
+          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
+        </div>
+          <a href="crocodiles.html" class="right">
+            <img src="img/image 2.png" alt="">
+          </a>
+        </div>
+        <div class="category-card" data-category="snakes">
+          <div class="left">
+            <h2>Супер змії</h2>
+          <p>Такі собі змії</p>
+
+          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
+        </div>
+          <a href="" class="right">
+            <img src="img/image 6(1).png" alt="">
+          </a>
+        </div>
+        <div class="category-card" data-category="others">
+          <div class="left">
+            <h2>Супер черепахи</h2>
+          <p>Такі собі черепахи</p>
+
+          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
+        </div>
+          <a href="turtles.html" class="right">
+            <img src="img/image 1.png" alt="">
+          </a>
         </div>
       </section>
     </main>
