list of lizards and snakes

--- a/list.html
+++ b/list.html
@@ -123,7 +123,7 @@
 
           <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
         </div>
-          <a href="" class="right">
+          <a href="snakes.html" class="right">
             <img src="img/image 6(1).png" alt="">
           </a>
         </div>
