--- a/lizards.html
+++ b/lizards.html
@@ -112,6 +112,30 @@
                 <img src="img/gila_monster.png" alt="Монстр Гіла" />
                 <h4>Монстр Гіла</h4>
               </div>
+              <div class="animal-card">
+                <img src="img/gila_monster.png" alt="Василіск шоломоносний" />
+                <h4>Василіск шоломоносний</h4>
+              </div>
+              <div class="animal-card">
+                <img src="img/gila_monster.png" alt="Дракон летючий" />
+                <h4>Дракон летючий</h4>
+              </div>
+              <div class="animal-card">
+                <img src="img/gila_monster.png" alt="Молох" />
+                <h4>Молох</h4>
+              </div>
+                <div class="animal-card">
+                <img src="img/gila_monster.png" alt="Гекон" />
+                <h4>Гекон</h4>
+              </div>
+                <div class="animal-card">
+                <img src="img/gila_monster.png" alt="Хамелеон" />
+                <h4>Хамелеон</h4>
+              </div>
+              <div class="animal-card">
+                <img src="img/frilled_lizard.png" alt="Червоний тегу" />
+                <h4>Червоний тегу</h4>
+              </div>
             </div>
           </div>
           <img class="hero-image" src="img/comodo_dragon.png" alt="Main Komodo Image" />
