--- a/lizards.html
+++ b/lizards.html
@@ -124,11 +124,11 @@
                 <img src="img/gila_monster.png" alt="Молох" />
                 <h4>Молох</h4>
               </div>
-                <div class="animal-card">
+              <div class="animal-card">
                 <img src="img/gila_monster.png" alt="Гекон" />
                 <h4>Гекон</h4>
               </div>
-                <div class="animal-card">
+              <div class="animal-card">
                 <img src="img/gila_monster.png" alt="Хамелеон" />
                 <h4>Хамелеон</h4>
               </div>
@@ -143,11 +143,20 @@
       </div>
       <section class="gallery pt-5">
         <div class="container">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
-          <img class="gallery-item" src="img/gallery 1.png" alt="Gallery 1" />
-          <img class="gallery-item" src="img/gallery 2.png" alt="Gallery 1" />
+          <img
+            class="gallery-item"
+            src="img/gallery 1.png"
+            alt="Gallery 1"
+            data-bs-toggle="modal"
+            data-bs-target="#photo1"
+          />
+          <img
+            class="gallery-item"
+            src="img/gallery 2.png"
+            alt="Gallery 1"
+            data-bs-toggle="modal"
+            data-bs-target="#photo2"
+          />
           <img class="gallery-item" src="img/gallery 3.png" alt="Gallery 1" />
           <img class="gallery-item" src="img/gallery 4.png" alt="Gallery 1" />
         </div>
@@ -158,15 +167,27 @@
         <div class="text-center mt-5 copyright">@ All rights reserved</div>
       </div>
     </footer>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-        <img class="gallery-item" src="img/gallery 1.png" alt="Gallery 1" />
+
+    <div class="modal fade" id="photo1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="img/gallery 1.png" alt="Gallery 1" />
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+
+    <div class="modal fade" id="photo2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="img/gallery 2.png" alt="Gallery 2" />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
