--- a/lizards.html
+++ b/lizards.html
@@ -157,8 +157,20 @@
             data-bs-toggle="modal"
             data-bs-target="#photo2"
           />
-          <img class="gallery-item" src="img/gallery 3.png" alt="Gallery 1" />
-          <img class="gallery-item" src="img/gallery 4.png" alt="Gallery 1" />
+          <img 
+            class="gallery-item" 
+            src="img/gallery 3.png" 
+            alt="Gallery 1" 
+            data-bs-toggle="modal" 
+            data-bs-target="#photo3"
+          />
+          <img 
+            class="gallery-item" 
+            src="img/gallery 4.png" 
+            alt="Gallery 1" 
+            data-bs-toggle="modal"
+            data-bs-target="#photo4"
+          />
         </div>
       </section>
     </main>
@@ -183,6 +195,26 @@
         <div class="modal-content">
           <div class="modal-body">
             <img class="gallery-item" src="img/gallery 2.png" alt="Gallery 2" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="photo3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="img/gallery 3.png" alt="Gallery 3" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="photo4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="img/gallery 4.png" alt="Gallery 4" />
           </div>
         </div>
       </div>
