fix: hot desctop fix

--- a/about.html
+++ b/about.html
@@ -30,13 +30,16 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
-            <button href="#">ПІДТРИМАТИ</button>
+            <button href="./settings.html">ПІДТРИМАТИ</button>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <h1>Ласкаво просимо на Reptilies Hub – ваш провідний ресурс у світі рептилій!</h1>
+      <h1 class="mb-4">
+        Ласкаво просимо на Reptilies Hub <br />
+        ваш провідний ресурс у світі рептилій!
+      </h1>
       <img src="img/gallery 1.png" alt="" />
 
       <section class="about1">
