--- a/crocodiles.html
+++ b/crocodiles.html
@@ -29,7 +29,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
-            <button href="#">ПІДТРИМАТИ</button>
+            <button href="./settings.html">ПІДТРИМАТИ</button>
           </div>
         </div>
       </nav>
