--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
-            <button href="#">ПІДТРИМАТИ</button>
+            <button href="./settings.html">ПІДТРИМАТИ</button>
           </div>
         </div>
       </nav>
@@ -97,7 +97,7 @@
                   <p class="news-desc flex-grow-1">
                     Крокодили (Crocodylia) - ряд водних плазунів, єдине сучасне ряд архозаврів...
                   </p>
-                  <a class="button" href="/crocodiles.html">ЧИТАТИ</a>
+                  <a class="button" href="./crocodiles.html">ЧИТАТИ</a>
                 </div>
               </div>
             </div>
@@ -111,7 +111,7 @@
                     Черепахи – це рептилії ряду Testudines, що характеризуються особливим панциром, розвиненим переважно
                     з їхніх...
                   </p>
-                  <button>ЧИТАТИ</button>
+                  <a class="button" href="./turtles.html">ЧИТАТИ</a>
                 </div>
               </div>
             </div>
@@ -125,7 +125,7 @@
                     Хамелеони або chamaeleons - це самобутня та високоспеціалізована клада ящірок Старого Світу, станом
                     на червень 2015 року...
                   </p>
-                  <button>ЧИТАТИ</button>
+                  <a class="button" href="./settings.html">ЧИТАТИ</a>
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@
                     Pythonidae, широко відомі як пітони, - це родина неотруйних змій, що мешкають в Африці, Азії та
                     Австралії. Серед її представників є одні...
                   </p>
-                  <button>ЧИТАТИ</button>
+                  <a class="button" href="./snakes.html">ЧИТАТИ</a>
                 </div>
               </div>
             </div>
