--- a/list.html
+++ b/list.html
@@ -23,16 +23,16 @@
         display: flex;
         justify-content: center;
         gap: 10px;
-        button{
+        button {
           cursor: pointer;
         }
       }
-      .main-title{
+      .main-title {
         text-align: center;
         margin-bottom: 30px;
       }
 
-      .animal-list{
+      .animal-list {
         display: flex;
         flex-direction: column;
         gap: 30px;
@@ -40,7 +40,7 @@
         align-items: center;
         margin: 0 auto;
       }
-      .category-card{
+      .category-card {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -50,13 +50,13 @@
         color: black;
       }
 
-      .category-card .left{
+      .category-card .left {
         width: 60%;
       }
-      .category-card .right{
+      .category-card .right {
         width: 35%;
       }
-      .category-card .right img{
+      .category-card .right img {
         width: 100%;
         object-fit: cover;
         border-radius: 8px;
@@ -76,9 +76,10 @@
           <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-uppercase fw-bold">
               <li class="nav-item"><a class="nav-link text-white px-4" href="./about.html">ПРО НАС</a></li>
-<li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>              <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
+              <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
+              <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
-            <button href="#">ПІДТРИМАТИ</button>
+            <button href="./settings.html">ПІДТРИМАТИ</button>
           </div>
         </div>
       </nav>
@@ -97,45 +98,57 @@
         <div class="category-card" data-category="lizards">
           <div class="left">
             <h2>Супер ящірки</h2>
-          <p>Такі собі ящірки</p>
+            <p>Такі собі ящірки</p>
 
-          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
-        </div>
+            <div class="desc">
+              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
+              found in southern China and northern Vietnam — remaining in the wild today.
+            </div>
+          </div>
           <a href="lizards.html" class="right">
-            <img src="img/gallery 1.png" alt="">
+            <img src="img/gallery 1.png" alt="" />
           </a>
         </div>
         <div class="category-card" data-category="crocodiles">
           <div class="left">
             <h2>Супер крокодили</h2>
-          <p>Такі собі крокодили</p>
+            <p>Такі собі крокодили</p>
 
-          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
-        </div>
+            <div class="desc">
+              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
+              found in southern China and northern Vietnam — remaining in the wild today.
+            </div>
+          </div>
           <a href="crocodiles.html" class="right">
-            <img src="img/image 2.png" alt="">
+            <img src="img/image 2.png" alt="" />
           </a>
         </div>
         <div class="category-card" data-category="snakes">
           <div class="left">
             <h2>Супер змії</h2>
-          <p>Такі собі змії</p>
+            <p>Такі собі змії</p>
 
-          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
-        </div>
+            <div class="desc">
+              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
+              found in southern China and northern Vietnam — remaining in the wild today.
+            </div>
+          </div>
           <a href="snakes.html" class="right">
-            <img src="img/image 6(1).png" alt="">
+            <img src="img/image 6(1).png" alt="" />
           </a>
         </div>
         <div class="category-card" data-category="others">
           <div class="left">
             <h2>Супер черепахи</h2>
-          <p>Такі собі черепахи</p>
+            <p>Такі собі черепахи</p>
 
-          <div class="desc">There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is found in southern China and northern Vietnam — remaining in the wild today.</div>
-        </div>
+            <div class="desc">
+              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
+              found in southern China and northern Vietnam — remaining in the wild today.
+            </div>
+          </div>
           <a href="turtles.html" class="right">
-            <img src="img/image 1.png" alt="">
+            <img src="img/image 1.png" alt="" />
           </a>
         </div>
       </section>
