--- a/lizards.html
+++ b/lizards.html
@@ -29,7 +29,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
-            <button href="#">ПІДТРИМАТИ</button>
+            <button href="./settings.html">ПІДТРИМАТИ</button>
           </div>
         </div>
       </nav>
@@ -157,17 +157,17 @@
             data-bs-toggle="modal"
             data-bs-target="#photo2"
           />
-          <img 
-            class="gallery-item" 
-            src="img/gallery 3.png" 
-            alt="Gallery 1" 
-            data-bs-toggle="modal" 
+          <img
+            class="gallery-item"
+            src="img/gallery 3.png"
+            alt="Gallery 1"
+            data-bs-toggle="modal"
             data-bs-target="#photo3"
           />
-          <img 
-            class="gallery-item" 
-            src="img/gallery 4.png" 
-            alt="Gallery 1" 
+          <img
+            class="gallery-item"
+            src="img/gallery 4.png"
+            alt="Gallery 1"
             data-bs-toggle="modal"
             data-bs-target="#photo4"
           />
