--- a/list.html
+++ b/list.html
@@ -79,7 +79,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
-            <button href="./settings.html">ПІДТРИМАТИ</button>
+            <a class="button" href="./settings.html">ПІДТРИМАТИ</a>
           </div>
         </div>
       </nav>
