--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
             </ul>
+
             <a class="button" href="./settings.html">ПІДТРИМАТИ</a>
           </div>
         </div>
@@ -38,8 +39,9 @@
       <section class="main-image pt-5">
         <img src="img/logo.png" class="mt-5" />
         <h2>Довідник Андрія Борисюка</h2>
-        <button>READ MORE</button>
+        <a class="button" href="./about.html">READ MORE</a>
       </section>
+
       <section class="intro-section py-5">
         <div class="container text-center py-5">
           <h2 class="text-uppercase fw-bold text-warning mb-4">вітаємо вас дорогі читачі</h2>
@@ -48,7 +50,7 @@
             захоплюючий світ холоднокровних! Тут ви зможете знайти різні цікаві факти про рептилій, їхній спосіб життя
             та унікальні особливості. Досліджуйте, дивуйтесь та дізнавайтесь нове!
           </p>
-          <button>Розпочати</button>
+          <a class="button" href="./list.html">Розпочати</a>
         </div>
       </section>
       <section class="features-section py-5">
