fix: chameleom url

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     Хамелеони або chamaeleons - це самобутня та високоспеціалізована клада ящірок Старого Світу, станом
                     на червень 2015 року...
                   </p>
-                  <a class="button" href="./settings.html">ЧИТАТИ</a>
+                  <a class="button" href="./lizards.html">ЧИТАТИ</a>
                 </div>
               </div>
             </div>
