--- a/crocodiles.html
+++ b/crocodiles.html
@@ -104,10 +104,33 @@
     </div>
     <section class="gallery pt-5">
         <div class="container">
-            <img class="gallery-item" src="https://cdnimpuls.com/newsbomb.al/media3/-900-0-1751449777xscreenshot-11-171.jpg" alt="Gallery 1">
-            <img class="gallery-item" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Female_croc.jpg/250px-Female_croc.jpg" alt="Gallery 1">
-            <img class="gallery-item" src="https://media.istockphoto.com/id/501885476/uk/%D1%84%D0%BE%D1%82%D0%BE/%D0%B0%D0%B2%D1%81%D1%82%D1%80%D0%B0%D0%BB%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BA%D1%80%D0%BE%D0%BA%D0%BE%D0%B4%D0%B8%D0%BB.jpg?s=612x612&w=0&k=20&c=N5QOGx_312kwMYJtN8U1eAp6YdHHoKdOHAyI5H4J7NQ=" alt="Gallery 1">
-            <img class="gallery-item" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Large_Crocodylus_porosus.jpg/640px-Large_Crocodylus_porosus.jpg" alt="Gallery 1">
+            <img 
+            class="gallery-item" 
+            src="https://cdnimpuls.com/newsbomb.al/media3/-900-0-1751449777xscreenshot-11-171.jpg" 
+            alt="Gallery 1"
+            data-bs-toggle="modal"
+            data-bs-target="#photo1"
+            />
+            <img 
+            class="gallery-item" 
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Female_croc.jpg/250px-Female_croc.jpg" 
+            alt="Gallery 1"
+            data-bs-toggle="modal"
+            data-bs-target="#photo2"
+            />
+            <img 
+            class="gallery-item" 
+            src="https://media.istockphoto.com/id/501885476/uk/%D1%84%D0%BE%D1%82%D0%BE/%D0%B0%D0%B2%D1%81%D1%82%D1%80%D0%B0%D0%BB%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BA%D1%80%D0%BE%D0%BA%D0%BE%D0%B4%D0%B8%D0%BB.jpg?s=612x612&w=0&k=20&c=N5QOGx_312kwMYJtN8U1eAp6YdHHoKdOHAyI5H4J7NQ=" 
+            alt="Gallery 1"
+            data-bs-toggle="modal"
+            data-bs-target="#photo3"
+            />
+            <img class="gallery-item" 
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Large_Crocodylus_porosus.jpg/640px-Large_Crocodylus_porosus.jpg" 
+            alt="Gallery 1"
+            data-bs-toggle="modal"
+            data-bs-target="#photo4"
+            />
         </div>
       </section>
     </main>
@@ -116,6 +139,47 @@
         <div class="text-center mt-5 copyright">@ All rights reserved</div>
       </div>
     </footer>
+
+        <div class="modal fade" id="photo1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="https://cdnimpuls.com/newsbomb.al/media3/-900-0-1751449777xscreenshot-11-171.jpg" alt="Gallery 1" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="photo2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Female_croc.jpg/250px-Female_croc.jpg" alt="Gallery 2" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="photo3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="https://media.istockphoto.com/id/501885476/uk/%D1%84%D0%BE%D1%82%D0%BE/%D0%B0%D0%B2%D1%81%D1%82%D1%80%D0%B0%D0%BB%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BC%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B8%D0%B9-%D0%BA%D1%80%D0%BE%D0%BA%D0%BE%D0%B4%D0%B8%D0%BB.jpg?s=612x612&w=0&k=20&c=N5QOGx_312kwMYJtN8U1eAp6YdHHoKdOHAyI5H4J7NQ=" alt="Gallery 3" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="photo4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="gallery-item" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Large_Crocodylus_porosus.jpg/640px-Large_Crocodylus_porosus.jpg" alt="Gallery 4" />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
