fix: list description

--- a/list.html
+++ b/list.html
@@ -118,8 +118,8 @@
             <p>Такі собі ящірки</p>
 
             <div class="desc">
-              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
-              found in southern China and northern Vietnam — remaining in the wild today.
+              Комодський варан – це найбільша ящірка у світі, яка може досягати 2 метрів у довжину і важити 70 кг, а
+              також є одним із найнебезпечніших хижаків.
             </div>
           </div>
           <a href="lizards.html" class="right">
@@ -132,8 +132,8 @@
             <p>Такі собі крокодили</p>
 
             <div class="desc">
-              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
-              found in southern China and northern Vietnam — remaining in the wild today.
+             Гребенястий крокодил –
+              Крокодил гребенястий, гребінчастий, або морський (Crocodylus porosus) — вид крокодила, що мешкає в солоних водоймах.
             </div>
           </div>
           <a href="crocodiles.html" class="right">
@@ -146,8 +146,8 @@
             <p>Такі собі змії</p>
 
             <div class="desc">
-              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
-              found in southern China and northern Vietnam — remaining in the wild today.
+            Анаконда - це рід великих напівводних змій сімейства удавів, що мешкають у Південній Америці, відома своєю масивністю, особливо зелена анаконда (Eunectes murinus).
+
             </div>
           </div>
           <a href="snakes.html" class="right">
@@ -160,8 +160,8 @@
             <p>Такі собі черепахи</p>
 
             <div class="desc">
-              There are perhaps no more than 1,000 individuals of the Endangered Chinese crocodile lizard — which is
-              found in southern China and northern Vietnam — remaining in the wild today.
+             Галапагонська черепаха –
+            Галапагоська черепаха (або слонова черепаха) — це найбільша сучасна сухопутна черепаха, ендемік Галапагоських островів, відома своїми величезними розмірами, довгожительством і повільним способом життя.
             </div>
           </div>
           <a href="turtles.html" class="right">
